bug fix feedback

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -556,6 +556,15 @@ span.badge {
 }
 
 /*** Customisation du bouton de feedback */
+
+#feedback-highlighter {
+    height: 320px;
+}
+
+#feedback-highlighter .lower:before, #feedback-highlighter .lower:after {
+    background-color: transparent;
+}
+
 .feedback-btn-gray {
     color: #fff;
     font-family: "Roboto", sans-serif;
@@ -1132,7 +1141,8 @@ span.badge {
     text-align: justify;
     text-indent: 10px;
 }
-div.legal .container ul > li{
+
+div.legal .container ul > li {
     list-style: disc !important;
     margin-left: 2em;
 }
@@ -1951,7 +1961,7 @@ span#top {
     min-width: 400px;
     max-width: 350px;
     border-radius: 3px;
-    box-shadow: 0 1px 10px rgba(0,0,0,.4);
+    box-shadow: 0 1px 10px rgba(0, 0, 0, .4);
     -webkit-transition: opacity 0.1s ease-out;
     -moz-transition: opacity 0.1s ease-out;
     -ms-transition: opacity 0.1s ease-out;
@@ -1959,12 +1969,11 @@ span#top {
     transition: opacity 0.1s ease-out;
 }
 
-
 .billing-switch label span {
     color: #000;
     font-weight: bold;
 }
 
-.picker__footer .picker__clear, .picker__footer .picker__close:nth-child(0n+2){
+.picker__footer .picker__clear, .picker__footer .picker__close:nth-child(0n+2) {
     display: none;
 }
