QHBWEB-275 : Directives Wordpress + page blog et détail

--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -217,7 +217,7 @@
                     </label>
                 </div>
                 <div class="col s12">
-                    <input id="modal-password" type="password" class="validate" ng-model="signin.passwd" required>
+                    <input id="modal-password" type="password" class="validate" ng-model="signin.passwd" required autocomplete>
                     <label for="modal-password">{{'modal.login.label.password' | translate }}
                         <span class="accent-text-color">*</span>
                     </label>
