--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -1,4 +1,4 @@
-<div class="container" ng-if="player" xmlns="http://www.w3.org/1999/html">
+<div class="container" ng-if="player">
     <div class="row"></div>
     
     <title-page-bar icon="person" title="{{player.firstname}} {{player.name}}"></title-page-bar>
