--- a/src/app/components/directives/cms/post-detail/post-detail.html
+++ b/src/app/components/directives/cms/post-detail/post-detail.html
@@ -1,3 +1,22 @@
-<featured-image media-id="{{post.featured_media}}" size="full"></featured-image>
-<span class="title" ng-bind-html="post.title.rendered"></span>
-<span ng-bind-html="post.content.rendered"></span>
+<div class="row"></div>
+
+<!-- Entete -->
+<div class="row dark-primary-color valign-wrapper">
+    <div class="col m10 s12 ">
+        <h4 ng-bind-html="post.title.rendered"></h4>
+    </div>
+    <div class="col m2 s12">
+        <button class="btn accent-color" ng-click="doTheBack()" translate="commons.buttons.back"></button>
+    </div>
+</div>
+<div class="post-header">
+    <featured-image media-id="post.featured_media" size="full" ng-if="post"></featured-image>
+</div>
+
+<div class="row" ng-if="post">
+    <div class="col s3 center">
+        <post-author author-id="post.author"></post-author>
+        <span class="post-date" ng-bind-html="formatDate(post.date)"></span>
+    </div>
+    <div class="col s9"><div class="post-content" ng-bind-html="post.content.rendered"></div></div>
+</div>
