--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1978,51 +1978,53 @@ span#top {
     display: none;
 }
 
-.cms-post-item .card-image {
+posts-list .card-image {
     max-height: 300px;
     overflow: hidden;
 }
 
-.cms-post-item .card-action {
+posts-list .card-action {
     min-height: 70px;
 }
 
-.cms-post-item post-author {
+posts-list post-author {
     width: 100%;
 }
 
-.cms-post-item post-author .post-author-image {
+posts-list post-author .post-author-image {
     display: block;
     margin: 0 auto;
 }
 
-.cms-post-item post-author .post-author-name {
+posts-list post-author .post-author-name {
     font-weight: bold;
 }
 
-.cms-post-item .post-date .post-date-day {
+posts-list .post-date .post-date-day {
     font-weight: bold;
     font-size: 2em;
     color: #78BE78;
 }
-.cms-post-item .post-date .post-date-month:before {
+posts-list .post-date .post-date-month:before {
     content: '/';
 }
 
-.cms-post-item .post-date .post-date-month {
+posts-list .post-date .post-date-month {
     font-weight: bold;
     font-size: 1em;
     color: #37474F;
 }
-
-.cms-post-item .post-date .post-date-year {
+posts-list .post-content::first-letter {
+    font-size: 1.5em;
+}
+posts-list .post-date .post-date-year {
     font-weight: bold;
     font-size: 1em;
     color: #37474F;
     display: block;
 }
 
-.cms-post-item .overlay {
+posts-list .overlay {
     position: absolute;
     width: 100%;
     bottom: 0;
@@ -2030,4 +2032,67 @@ span#top {
     z-index: 2;
     cursor: pointer;
     height: 100px;
+}
+
+post-detail .post-header {
+    max-height: 300px;
+    overflow: hidden;
+    margin: -20px -11px -11px;
+}
+
+
+post-detail featured-image img {
+    width: 100%;
+}
+
+post-detail img.aligncenter {
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+
+
+post-detail post-author {
+    width: 100%;
+}
+
+post-detail post-author .post-author-image {
+    display: block;
+    z-index: 999;
+    position: relative;
+    margin: -40px auto 0;
+}
+
+post-detail post-author .post-author-name {
+    font-weight: bold;
+}
+
+post-detail .post-date .post-date-day {
+    font-weight: bold;
+    font-size: 2em;
+    color: #78BE78;
+}
+post-detail .post-date .post-date-month:before {
+    content: '/';
+}
+
+post-detail .post-date .post-date-month {
+    font-weight: bold;
+    font-size: 1em;
+    color: #37474F;
+}
+
+post-detail .post-date .post-date-year {
+    font-weight: bold;
+    font-size: 1em;
+    color: #37474F;
+    display: block;
+}
+
+post-detail .post-content {
+    margin-top: 50px;
+}
+
+post-detail .post-content::first-letter {
+    font-size: 1.5em;
 }
