fixes QHBWEB-275 : Directives Wordpress + page blog et détail

--- a/src/app/components/directives/cms/post-list/post-list.html
+++ b/src/app/components/directives/cms/post-list/post-list.html
@@ -1,21 +1,26 @@
-<div class="card cms-post-item" ng-repeat="p in posts">
-    <div class="card-image">
-        <featured-image media-id="p.featured_media" size="full"></featured-image>
-        <div class="overlay">
-            <span class="card-title" ng-bind-html="p.title.rendered"></span>
-        </div>
-    </div>
-    <div class="card-content">
-        <div class="row">
-            <div class="col s3 center">
-                <post-author author-id="p.author"></post-author>
-                <span class="post-date" ng-bind-html="formatDate(p.date)"></span>
+<div class="row">
+    <div class="card cms-post-item col s12 m6" ng-repeat="p in posts">
+        <div class="card-image">
+            <featured-image media-id="p.featured_media" size="full"></featured-image>
+            <div class="overlay">
+                <span class="card-title" ng-bind-html="p.title.rendered"></span>
             </div>
-            <div class="col s9"><div class="post-content" ng-bind-html="p.excerpt.rendered"></div></div>
         </div>
-    </div>
+        <div class="card-content">
+            <div class="row">
+                <div class="col s3 center">
+                    <post-author author-id="p.author"></post-author>
+                    <span class="post-date" ng-bind-html="formatDate(p.date)"></span>
+                </div>
+                <div class="col s9">
+                    <div class="post-content" ng-bind-html="p.excerpt.rendered"></div>
+                </div>
+            </div>
+        </div>
 
-    <div class="card-action">
-        <a href="#/blog/{{p.id}}" class="btn btn-sm secondary-color pull-right" translate="commons.buttons.read-more"></a>
+        <div class="card-action">
+            <a href="#/blog/{{p.id}}" class="btn btn-sm secondary-color pull-right"
+               translate="commons.buttons.read-more"></a>
+        </div>
     </div>
 </div>
