--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -14,7 +14,7 @@
                     </li>
                     <li><a href="#/pricing" translate="navbar.pricing"/></li>
                     <li><a href="#/about" translate="navbar.aboutUs"/></li>
-                    <li><a href="#/news" translate="navbar.news"/></li>
+                    <li><a href="#/blog" translate="navbar.news"/></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color" alt="icon"
@@ -61,7 +61,7 @@
                            ng-click="gotoAnchor('contact')"></a>
                     </li>
                     <li><a href="#/about" class="white-text" translate="navbar.aboutUs"/></li>
-                    <li><a href="#/news" class="white-text" translate="navbar.news"/></li>
+                    <li><a href="#/blog" class="white-text" translate="navbar.news"/></li>
                     <li>
                         <a href="javascript:void(0)" class="waves-effect waves-white secondary-color"
                            ng-click="openSignup()"
