--- a/src/app/modules/public/privacy-policy.html
+++ b/src/app/modules/public/privacy-policy.html
@@ -1,201 +1,3 @@
 <div id="index-banner" class="colorMain-text legal">
-    <div class="col s12  center-align">
-        <h2 class="title">Politique de confidentialité</h2>
-    </div>
-    <div class="row">&nbsp;</div>
-    <div class="container">
-        <h3>1- Objet</h3>
-        <p>Cette rubrique est destinée à renseigner l’utilisateur sur la Politique de respect de la vie privée et expose
-            les pratiques concernant la collecte, l'usage et la communication des informations que l’utilisateur peut
-            fournir à la société QAOBEE par le biais du service QAOBEE qu’elle exploite.</p>
-        <p>Tout utilisateur, par l’accès, la navigation, la consultation et/ou utilisant du Service, accepte les termes
-            de la présente Politique de respect de la vie privée.</p>
-
-        <h3>2- Conformité</h3>
-        <p>L'utilisateur est notamment informé que, conformément à l'article 32 de la loi n° 78-87 du 6 janvier 1978
-            modifiée le 6 juin 2004, les informations communiquées par l'utilisateur du fait des formulaires présents
-            sur le Site Internet sont nécessaires pour répondre à sa demande, et sont destinées à la société QAOBEE,
-            responsable du traitement, notamment à des fins de gestion administrative des inscriptions.</p>
-
-        <h3>3- Consentement</h3>
-        <p>En utilisant ce service, l’utilisateur est réputé accepter les conditions de la Politique de respect de la
-            vie privée. Chaque fois que l’utilisateur communique des informations sur ce service, il accepte qu'elles
-            soient collectées, utilisées et communiquées selon les termes de la Politique de respect de la vie
-            privée.</p>
-
-        <h3>4- Personnes capables</h3>
-        <p>Aucune information ne doit être adressée au Service QAOBEE par toute personne qui n’en n’a pas la capacité
-            juridique.</p>
-        <p>Les parents d’enfants mineurs sont encouragés à sensibiliser ces derniers à l'utilisation d'Internet et aux
-            informations qu'ils divulguent sur les services Internet.</p>
-
-        <h3>5- Collecte active de données</h3>
-        <p>Lorsque l’utilisateur navigue sur ce service, il peut lui être demandé de fournir des données à caractère
-            personnel, notamment par le biais de formulaires.</p>
-        <p>Cette collecte de données est nécessaire pour faire bénéficier à l’utilisateur des fonctionnalités proposées
-            sur le service (formulaire de contact, formulaire d’inscription, soumission d’offres et de demandes,
-            etc…).</p>
-        <p>Dans ce cas l’utilisateur sera informé des données requises à titre obligatoire ou à titre optionnel.</p>
-
-        <h3>6- Collecte passive de données</h3>
-        <p>Lorsque l’utilisateur emploie ce service, certaines informations peuvent être collectées passivement
-            (c'est-à-dire recueillies à son insu) par le biais de diverses technologies comme les cookies, les balises
-            Internet et par la collecte de données de navigation (journaux des connexions, journaux de serveur, analyse
-            des chemins empruntés sur le service).</p>
-        <p>Le logiciel de navigation transmet automatiquement au service certaines de ces informations, telles que l'URL
-            d'où l’utilisateur provient ainsi que l'adresse IP et la version du logiciel de navigation utilisé par
-            l’ordinateur employé. Ce service peut aussi recueillir des informations sur l’ordinateur par le biais de
-            cookies, balises Internet.</p>
-        <p>L’utilisateur peut programmer son logiciel de navigation pour qu'il avertisse dès qu'un cookie est envoyé ou
-            pour qu'il bloque tous les cookies, mais certaines rubriques du service risquent de ne pas fonctionner sans
-            cookies.</p>
-        <p>Ce service peut utiliser et combiner les informations collectées passivement dans le but d'améliorer les
-            fonctionnalités fournies aux utilisateurs, de s'adapter en fonction des préférences, de compiler et
-            d'analyser des statistiques et des tendances ainsi que pour réaliser certaines modifications visant à
-            faciliter la consultation du service.</p>
-        <p>Ce type d'information n'est pas compilé avec des données à caractère personnel recueillies ailleurs sur le
-            service, sauf consentement exprès de la part de l’utilisateur.</p>
-        <p>Un "cookie" est un petit lot d’informations envoyé par un service Internet au logiciel de navigation Internet
-            de l’utilisateur qui permet au service de retenir certaines informations à votre sujet ou au sujet des
-            préférences de navigation.</p>
-        <p>Les cookies "témoins de session" ("sessions cookies") sont de petits lots d’informations temporaires utilisés
-            pour améliorer la navigation sur un service Internet, pour empêcher les utilisateurs de fournir de fausses
-            informations (le service peut ainsi "retenir" l’information fournie par un utilisateur dans un formulaire,
-            par exemple son âge ou son pays d’origine qui, par hypothèse, ne lui permettrait pas d’accéder au service
-            concerné, et empêcher la modification ultérieure de cette information) et pour collecter des données
-            statistiques sur le service. Ces cookies sont automatiquement supprimés à la fermeture du logiciel de
-            navigation de l’utilisateur ou lorsque l’utilisateur éteint son ordinateur.</p>
-        <p>Les cookies "persistants" ("persistent cookies") sont des petits lots d'informations plus durables qui sont
-            placés sur le disque dur de l’ordinateur de l’utilisateur et y restent à moins que l’utilisateur ne les
-            efface. Les cookies persistants stockent des informations sur le disque dur pour plusieurs raisons, comme
-            récupérer des informations que l’utilisateur a fournies précédemment (ex. : mots de passe), repérer les
-            rubriques du service les plus appréciées des utilisateurs et adapter continuellement le service en fonction
-            des préférences des utilisateurs.</p>
-        <p>Les cookies persistants placés par ce service dans le disque dur de votre ordinateur peuvent contenir des
-            informations permettant d’identifier personnellement l’utilisateur, mais uniquement si celui-ci s’est
-            préalablement enregistré ou s’il a consenti d'une autre manière à la conservation d'informations de ce type
-            qu’il a fournies au service auparavant. Sans cela, le service saura tout simplement qu'un utilisateur non
-            identifié possédant ces cookies est revenu sur le service.</p>
-        <p>L’utilisateur peut configurer son logiciel de navigation pour qu'il accepte tous les cookies, qu'il rejette
-            tous les cookies ou qu'il le prévienne à chaque fois qu'un cookie est proposé pour qu’il puisse décider de
-            l'accepter ou pas.</p>
-        <p>La marche à suivre est accessible sur le site de la commission nationale informatique et libertés (CNIL) à
-            l’adresse suivante :
-            <a href="http://www.cnil.fr/vos-droits/vos-traces/les-cookies/" target="_blank">http://www.cnil.fr/vos-droits/vos-traces/les-cookies/</a>
-        </p>
-        <p>De manière générale, pour en apprendre plus sur les cookies et sur la manière de spécifier vos préférences,
-            l’utilisateur doit rechercher le terme "cookie" dans la rubrique "Aide" du logiciel de navigation
-            Internet.</p>
-        <p>Ce service peut utiliser des adresses de protocole Internet (IP). Une adresse IP est un nombre attribué à un
-            ordinateur par le fournisseur d'accès à Internet (FAI) pour que l’utilisateur puisse accéder à l'Internet et
-            est généralement considérée comme une information ne permettant pas d’identifier personnellement
-            l’utilisateur car, dans la plupart des cas, l'adresse IP est dynamique (elle change à chaque connection à
-            Internet), plutôt que statique (unique à l'ordinateur d'un utilisateur spécifique). L'adresse IP peut être
-            utilisée pour diagnostiquer des problèmes avec un serveur informatique, communiquer des données d'ensemble,
-            déterminer la voie la plus rapide pour relier un ordinateur au service, administrer et améliorer le
-            service.</p>
-        <p>Les "balises Internet" sont des lots d’informations plus petits que les cookies et qui fournissent au serveur
-            du service des informations telles que l'adresse IP et le type de logiciel de navigation associés à
-            l'ordinateur de l’utilisateur. Des balises peuvent être placées aussi bien sur des publicités en ligne qui
-            amènent les utilisateurs vers le service que sur différentes pages du service. Elles indiquent combien de
-            fois une page a été ouverte et quelles informations ont été consultées.</p>
-        <p>Les "données de navigation" (fichiers journaux, journaux de serveurs, et données d’analyse des chemins
-            empruntés par l’internaute sur le service) sont utilisées pour la gestion du système, pour améliorer le
-            contenu du service, pour mener des études de marché et pour communiquer des informations aux
-            utilisateurs.</p>
-
-        <h3>7- Utilisation et communication des informations</h3>
-        <p>En tout état de cause la société QAOBEE ne collecte des informations personnelles relatives à l’utilisateur
-            (nom, adresse électronique, coordonnées téléphoniques) que pour le besoin des services proposés, notamment
-            pour la mise en relation par le biais de formulaires en ligne ou pour des traitements statistiques.
-            L’utilisateur fournit ces informations en toute connaissance de cause, notamment lorsqu’il procède par
-            lui-même à leur saisie. Il est alors précisé à l’utilisateur le caractère obligatoire ou non des
-            informations qu’il serait amené à fournir.</p>
-        <p>Sauf stipulation contraire, QAOBEE se réserve donc le droit d'utiliser les informations que l’utilisateur a
-            fournies pour améliorer le contenu du service, pour adapter le service en fonction des préférences de
-            l’utilisateur, pour communiquer des informations (si l’utilisateur l'a demandé), à des fins de recherche et
-            de marketing ou toute autre fin spécifiée dans les conditions de la Politique de respect de la vie
-            privée.</p>
-        <p>QAOBEE se réserve également le droit d’utiliser toutes informations recueillies par l'intermédiaire du
-            service qui ne constitueraient pas des données à caractère personnel.</p>
-        <p>Si l’utilisateur communique des données à caractère personnel sur ce service, QAOBEE se réserve le droit de
-            les compiler avec d'autres informations collectées activement, sauf stipulation contraire de la part au
-            niveau du formulaire de collecte.</p>
-        <p>QAOBEE s’interdit de communiquer les données à caractère personnel des utilisateurs à des tiers.</p>
-        <p>QAOBEE informe qu’elle peut néanmoins divulguer en toute bonne foi des données personnelles concernant
-            l’utilisateur si QAOBEE juge une telle action indispensable pour : (i) se conformer à une obligation légale
-            ; (ii) respecter une procédure légale ou (iii) défendre ses droits ou sa propriété.</p>
-        <p>En particulier, QAOBEE peut communiquer les données à caractère personnel de l’utilisateur à des tiers, mais
-            uniquement :</p>
-        <ul>
-            <li>Aux sous-traitants auxquels QAOBEE fait appel dans le cadre de ses activités (ex. : travaux d'exécution,
-                support technique, etc…). Dans ce cas, QAOBEE exige des tiers concernés qu'ils traitent les données des
-                utilisateurs conformément à la Politique de respect de la vie privée et dans le respect des finalités
-                pour lesquelles les données ont été collectées ;
-            </li>
-            <li>Dans le cadre de la vente, de la cession ou de tout autre transfert des activités commerciales
-                auxquelles se rapportent les informations communiquées sur ce service. Dans ce cas, QAOBEE exigera de
-                l'acquéreur qu'il traite les données des utilisateurs conformément à la Politique de respect de la vie
-                privée et dans le respect des finalités pour lesquelles les données ont été collectées ;
-            </li>
-            <li>Dans les cas imposés par la loi, la réglementation ou sur réquisition judiciaire.</li>
-        </ul>
-        <p>Dans le cas où la collecte, l'utilisation et la communication des informations objet de la présente Politique
-            de respect de la vie privée impliqueraient le transfert de données à caractère personnel à des tiers situés
-            dans des pays susceptibles de ne pas offrir un niveau adéquat de protection des données à caractère
-            personnel, il serait demandé aux utilisateurs de donner leur consentement à un tel transfert.</p>
-
-        <h3>8- Accès, correction et suppression des informations</h3>
-        <p>L'utilisateur est informé qu'il dispose d'un droit d'accès, d'interrogation et de rectification qui lui
-            permet, le cas échéant, de faire rectifier, compléter, mettre à jour, verrouiller ou effacer les données
-            personnelles le concernant qui sont inexactes, incomplètes, équivoques, périmées ou dont la collecte,
-            l'utilisation, la communication ou la conservation est interdite.</p>
-        <p>L'utilisateur dispose également d'un droit d'opposition au traitement de ses données pour des motifs
-            légitimes ainsi qu'un droit d'opposition à ce que ces données soient utilisées à des fins de prospection
-            commerciale.</p>
-        <p>L'ensemble de ces droits s'exerce auprès de la société QAOBEE par courrier accompagné d'une copie d'un titre
-            d'identité comportant une signature afin d’éviter toute usurpation d’identité.</p>
-        <p>Pour exercer le droit d'accès, de modification, de rectification et de suppression des données à caractère
-            personnel concernant l’utilisateur, en application des articles 38 et suivants de la loi 78-17 du 6 janvier
-            1978 dite "Informatique et Libertés" (modifiée le 6 avril 2004), et permettre à QAOBEE de garantir
-            l'exactitude, le caractère complet et la mise à jour de ces données, QAOBEE doit être contacté à l'adresse
-            <a href="mailto:contact@qaobee.com">contact@qaobee.com</a></p>
-        <p>QAOBEE mettra alors tout en œuvre pour mettre à jour, corriger, ou supprimer les données à caractère
-            personnel concernant l’utilisateur dans les meilleurs délais.</p>
-        <p>QAOBEE se réserve la possibilité de demander à l’utilisateur concerné de justifier de son identité et de la
-            pertinence de sa demande.</p>
-
-        <h3>9- Sécurité</h3>
-        <p>QAOBEE prend toutes les mesures raisonnables pour protéger les données à caractère personnel de l’utilisateur
-            au moment de leur transmission sur le service, en particulier contre la perte, l'usage abusif, l'accès non
-            autorisé, la divulgation, l'altération ou la destruction.</p>
-        <p>Il convient toutefois de savoir qu'aucun transfert d'information sur internet n'est totalement sécurisé ni à
-            l'abri d'erreurs. Ceci vaut en particulier pour les courriers électroniques et contenus de messagerie
-            échangés avec le service.</p>
-
-        <h3>10- Liens vers d'autres services Internet</h3>
-        <p>Ce service peut comporter des liens hypertextes ou des références à d'autres services Internet.</p>
-        <p>QAOBEE attire l’attention sur le fait qu’elle n'exerce aucun contrôle sur les services tiers et que la
-            Politique de respect de la vie privée ne s'applique pas dans ce cas.</p>
-
-        <h3>11- Modification et application</h3>
-        <p>QAOBEE se réserve à l’occasion le droit de modifier les termes de la présente Politique relative à la vie
-            privée, ces modifications prenant effet immédiatement, dès l’affichage sur le Service de la version
-            modifiée. Toute modification sera aussitôt affichée sur le service.</p>
-        <p>L’utilisateur sera réputé avoir accepté la Politique relative à la vie privée dans sa version mise à jour et
-            disponible sur le Service, chaque fois qu’il accède au Service ou qu’il l’utilise. L’utilisateur est donc
-            invité à vérifier régulièrement si la Politique de respect de la vie privée a été mise à jour, tout
-            particulièrement avant de communiquer toute donnée à caractère personnel.</p>
-        <p>La présente Politique relative à la vie privée sera régie et interprétée conformément au droit français.</p>
-        <p>L’utilisateur et QAOBEE conviennent de soumettre à la compétence des tribunaux Français et toute plainte ou
-            litige survenant dans le cadre du ou se rapportant à la présente Politique relative à la vie privée.</p>
-        <p>Les utilisateurs du Service s’engagent eux-mêmes à de respecter les dispositions de la loi relative à
-            l'Informatique, aux Fichiers et aux Libertés, dont la violation est passible de sanctions pénales.</p>
-        <p>Ils doivent notamment s'abstenir, s'agissant des informations à caractère personnel auxquelles ils accèdent,
-            de toute collecte, de toute utilisation détournée et, d'une manière générale, de tout acte susceptible de
-            porter atteinte à la tranquillité, la vie privée ou à la réputation des personnes.</p>
-
-        <blockquote>Dernière mise à jour de la Politique de respect de la vie privée : 2 novembre 2017</blockquote>
-
-    </div>
+    <page-detail page-id="116"></page-detail>
 </div>
