--- a/src/app/components/directives/cms/post-author/post-author.html
+++ b/src/app/components/directives/cms/post-author/post-author.html
@@ -1,4 +1,4 @@
-<div>
+<div class="center-align">
     <img class="circle post-author-image" ng-src="{{getAvatar(author)}}" alt="{{author.name}}" />
     <span class="post-author-name">{{author.name}}</span>
 </div>
