--- a/src/app/components/directives/cms/post-list/post-list.html
+++ b/src/app/components/directives/cms/post-list/post-list.html
@@ -1,4 +1,67 @@
 <div class="row">
+    
+    <timeline>
+        <timeline-event ng-repeat="event in posts" side="right">
+          <timeline-badge class="info">
+            <i class="material-icons">equalizer</i>
+          </timeline-badge>
+        
+            <timeline-panel class="info default-text-color">
+                <span class="post-date" ng-bind-html="formatDate(p.date)"></span>
+                <h5><span class="secondary-text-color" ng-bind-html="event.title.rendered"></span></h5>  
+                <div class="row">
+                    <div class="col s6"><featured-image media-id="event.featured_media"></featured-image></div>
+                    <div class="col s6 center-align">
+                        <post-author author-id="event.author"></post-author>
+                        <span ng-bind-html="event.excerpt.rendered"></span>
+                        <div class="light-primary-color">
+                            <br/>
+                            <a href="javascript:void(0)" class="btn-floating accent-color"
+                               ng-click="hidden=true"><i class="material-icons">remove_red_eye</i></a>
+                            <br/>&nbsp;
+                            <br/>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row center-align" ng-click="hidden=false" style="cursor: pointer;">
+                    <div ng-if="hidden" class="light-primary-color">
+                        <br/>
+                        <a href="javascript:void(0)" class="btn-floating accent-color" ng-click="hidden=false"><i class="material-icons center-align">cancel</i></a>
+                        <br/>&nbsp;
+                        <br/>
+                    </div>
+                    <div ng-if="hidden" class="center-align" ng-bind-html="event.content.rendered" ></div>
+                    <div ng-if="hidden" class="light-primary-color">
+                        <br/>
+                        <a href="javascript:void(0)" class="btn-floating accent-color" ng-click="hidden=false"><i class="material-icons center-align">cancel</i></a>
+                        <br/>&nbsp;
+                        <br/>
+                    </div>
+                </div>
+            </timeline-panel>
+        </timeline-event>
+    </timeline>
+    
+    <!--
+    <ul class="collapsible" data-collapsible="accordion">
+    <li ng-repeat="p in posts">
+      <div class="collapsible-header"><i class="material-icons">filter_drama</i><span ng-bind-html="formatDate(p.date)"></span><span ng-bind-html="p.title.rendered"></span></div>
+      <div class="collapsible-body"><div class="row">
+                <div class="col s3 center">
+                    <post-author author-id="p.author"></post-author>
+                    <span class="post-date" ng-bind-html="formatDate(p.date)"></span>
+                </div>
+                <div class="col s9">
+                    <featured-image media-id="p.featured_media" size="full"></featured-image>
+                    <div class="post-content" ng-bind-html="p.excerpt.rendered"></div>
+                </div>
+            </div>
+        </div>
+    </li>
+    
+  </ul>
+    
     <div class="card cms-post-item col s12 m6" ng-repeat="p in posts">
         <div class="card-image">
             <featured-image media-id="p.featured_media" size="full"></featured-image>
@@ -23,4 +86,5 @@
                translate="commons.buttons.read-more"></a>
         </div>
     </div>
+-->
 </div>
