Aménagement tarif et accueil

--- a/src/app/modules/public/cms/postList.html
+++ b/src/app/modules/public/cms/postList.html
@@ -1,3 +1,5 @@
+<span ng-repeat="p in parts track by $index" ng-include="'app/modules/public/parts/'+p+'.html'"></span>
+
 <div class="container">
     <posts-list></posts-list>
 </div>
