--- a/src/app/modules/public/parts/04.html
+++ b/src/app/modules/public/parts/04.html
@@ -1,4 +1,4 @@
-<div class="home dark-primary-color" id="download">
+<div class="home secondary-color" id="download">
     <div class="container">
         <h4 class="center" translate="landing.area-4.title"></h4>
         <p class="center hide-on-small-only" translate="landing.area-4.content"></p>
