--- a/src/app/modules/public/parts/05.html
+++ b/src/app/modules/public/parts/05.html
@@ -1,4 +1,4 @@
-<div class="container" id="progress">
+<div class="container light-primary-color" id="progress">
     <div class="row">
         <div class="col m2 s12 icon-conceptH">
             <i class="fa fa-bar-chart fa-fw fa-4x white-text"></i>
