--- a/src/app/modules/public/parts/07.html
+++ b/src/app/modules/public/parts/07.html
@@ -1,4 +1,4 @@
-<div class="container" id="collaborate">
+<div class="container light-primary-color" id="collaborate">
     <div class="row">
         <div class="col m2 s12 icon-conceptH">
             <i class="fa fa-flag fa-fw fa-4x white-text"></i>
