--- a/src/app/modules/public/parts/03.html
+++ b/src/app/modules/public/parts/03.html
@@ -1,4 +1,4 @@
-<div class="container" id="collect">
+<div class="container light-primary-color" id="collect">
     <div class="row">
         <div class="col s12 m2 icon-conceptH">
             <i class="fa fa-eye fa-fw fa-4x white-text"></i>
@@ -66,3 +66,4 @@
         </div>
     </div>
 </div>
+<br>
